# rLoess

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
src/pyloess/: __init__.py  loess.py
src/rloess/: __init__.py  loess.py
tests/: test_loess.py
